syntax = "proto3";

import "library/cpp/getoptpb/proto/confoption.proto";

package NAlice.NWonderlogs;

message TConfig {
    option (NGetoptPb.Title) = "TableCreator";

    string Cluster = 1;
    string TablePath = 2;
}
